# rust-webassembly

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js
src/: app.rs  main.rs
src/components/: banner.rs  counter.rs
src/page/: home_page.rs
src/pages/: home_page.rs
src/styles/: banner_style.rs
