[package]
name = "test1"
version = "0.1.0"
authors = ["rushmi0 <gcalku@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
